--- a/welcome_to_colab.ipynb
+++ b/welcome_to_colab.ipynb
@@ -76,13 +76,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "gJr_9dXGpJ05",
-        "outputId": "09ef742d-1fb2-4cc8-a5a9-ff2b9f315ffb"
+        "outputId": "8e04b842-cc4b-42b0-ef65-756bc152ac5c"
       },
       "outputs": [
         {
@@ -171,40 +171,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "cellView": "both",
         "colab": {
-          "height": 235,
           "base_uri": "https://localhost:8080/"
         },
         "id": "d-S-3nYLQSHb",
-        "outputId": "bdce973b-b35c-497e-efde-4007c29de539"
+        "outputId": "250b9174-f6cf-4d21-b004-3460ac31fb78"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Sleeping\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "KeyboardInterrupt",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-3-fb6d98dc021a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Sleeping\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m30\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# sleep for a while; interrupt me!\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Done Sleeping\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+            "Sleeping\n",
+            "Done Sleeping\n"
           ]
         }
       ],
       "source": [
         "import time\n",
         "print(\"Sleeping\")\n",
-        "time.sleep(30) # sleep for a while; interrupt me!\n",
+        "time.sleep(1) # sleep for a while; interrupt me!\n",
         "print(\"Done Sleeping\")"
       ]
     },
@@ -645,13 +634,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "RWSJpsyKqHjH",
-        "outputId": "13a2d44a-ef92-405a-a0ad-ec86d7224829"
+        "outputId": "e2689804-bade-44d7-d838-e0fd7ec319f2"
       },
       "outputs": [
         {
@@ -669,38 +658,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "XDg9OBaYqRMd",
-        "outputId": "45405449-8e21-4c62-8c1e-8bdfe365da15"
+        "outputId": "8038dbfd-e90f-4d6a-ed26-b85b58c44fdd"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Hello Google Drive!"
+            "cat: '/content/drive/My Drive/foo.txt': No such file or directory\n"
           ]
         }
       ],
       "source": [
-        "with open('/content/drive/My Drive/foo.txt', 'w') as f:\n",
+        "with open('/content/drive/My Drive/IonitBogdan.txt', 'w') as f:\n",
         "  f.write('Hello Google Drive!')\n",
         "!cat /content/drive/My\\ Drive/foo.txt"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "D78AM1fFt2ty",
-        "outputId": "66060af3-8432-4a7f-9e65-17ac199bddb6"
+        "outputId": "9b988507-afdd-44b2-91a2-041afe658a5d"
       },
       "outputs": [
         {
@@ -738,28 +727,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "GQ18Kd5F3uKe",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c39645d5-b065-43a9-ff2a-54fb06df7605"
+        "outputId": "82f4b0d7-dd22-4cd9-8c06-a1d375ce7520"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: matplotlib-venn in /usr/local/lib/python3.7/dist-packages (0.11.6)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.7/dist-packages (from matplotlib-venn) (1.21.5)\n",
-            "Requirement already satisfied: scipy in /usr/local/lib/python3.7/dist-packages (from matplotlib-venn) (1.4.1)\n",
-            "Requirement already satisfied: matplotlib in /usr/local/lib/python3.7/dist-packages (from matplotlib-venn) (3.2.2)\n",
-            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.7/dist-packages (from matplotlib->matplotlib-venn) (0.11.0)\n",
-            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib->matplotlib-venn) (1.3.2)\n",
-            "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib->matplotlib-venn) (2.8.2)\n",
-            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib->matplotlib-venn) (3.0.7)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.7/dist-packages (from python-dateutil>=2.1->matplotlib->matplotlib-venn) (1.15.0)\n"
+            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
+            "Requirement already satisfied: matplotlib-venn in /usr/local/lib/python3.8/dist-packages (0.11.7)\n",
+            "Requirement already satisfied: matplotlib in /usr/local/lib/python3.8/dist-packages (from matplotlib-venn) (3.2.2)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.8/dist-packages (from matplotlib-venn) (1.21.6)\n",
+            "Requirement already satisfied: scipy in /usr/local/lib/python3.8/dist-packages (from matplotlib-venn) (1.7.3)\n",
+            "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.8/dist-packages (from matplotlib->matplotlib-venn) (2.8.2)\n",
+            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.8/dist-packages (from matplotlib->matplotlib-venn) (1.4.4)\n",
+            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.8/dist-packages (from matplotlib->matplotlib-venn) (3.0.9)\n",
+            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.8/dist-packages (from matplotlib->matplotlib-venn) (0.11.0)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.8/dist-packages (from python-dateutil>=2.1->matplotlib->matplotlib-venn) (1.15.0)\n"
           ]
         }
       ],
@@ -769,27 +759,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "__3eqm3q3sr-",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1ebcfb3a-1bc4-4860-dbe2-07b52eb9bd2a"
+        "outputId": "fa273440-7dc9-4b4b-e35a-f6061325b2c9"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Selecting previously unselected package libfluidsynth1:amd64.\n",
-            "(Reading database ... 155113 files and directories currently installed.)\n",
-            "Preparing to unpack .../libfluidsynth1_1.1.9-1_amd64.deb ...\n",
-            "Unpacking libfluidsynth1:amd64 (1.1.9-1) ...\n",
-            "Setting up libfluidsynth1:amd64 (1.1.9-1) ...\n",
-            "Processing triggers for libc-bin (2.27-3ubuntu1.3) ...\n",
-            "/sbin/ldconfig.real: /usr/local/lib/python3.7/dist-packages/ideep4py/lib/libmkldnn.so.0 is not a symbolic link\n",
-            "\n"
+            "E: Package 'libfluidsynth1' has no installation candidate\n"
           ]
         }
       ],
@@ -808,13 +791,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "id": "d_j7nNbKRmhx",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a08010ce-5e2c-470f-d67b-af2f44a95499"
+        "outputId": "295c0020-cb66-4a18-bc42-5090897d9fde"
       },
       "outputs": [
         {
@@ -822,20 +805,22 @@
           "name": "stdout",
           "text": [
             "Selecting previously unselected package libarchive-dev:amd64.\n",
-            "(Reading database ... \r(Reading database ... 5%\r(Reading database ... 10%\r(Reading database ... 15%\r(Reading database ... 20%\r(Reading database ... 25%\r(Reading database ... 30%\r(Reading database ... 35%\r(Reading database ... 40%\r(Reading database ... 45%\r(Reading database ... 50%\r(Reading database ... 55%\r(Reading database ... 60%\r(Reading database ... 65%\r(Reading database ... 70%\r(Reading database ... 75%\r(Reading database ... 80%\r(Reading database ... 85%\r(Reading database ... 90%\r(Reading database ... 95%\r(Reading database ... 100%\r(Reading database ... 155118 files and directories currently installed.)\n",
-            "Preparing to unpack .../libarchive-dev_3.2.2-3.1ubuntu0.7_amd64.deb ...\n",
-            "Unpacking libarchive-dev:amd64 (3.2.2-3.1ubuntu0.7) ...\n",
-            "Setting up libarchive-dev:amd64 (3.2.2-3.1ubuntu0.7) ...\n",
-            "Processing triggers for man-db (2.8.3-2ubuntu0.1) ...\n",
+            "(Reading database ... 128126 files and directories currently installed.)\n",
+            "Preparing to unpack .../libarchive-dev_3.4.0-2ubuntu1.2_amd64.deb ...\n",
+            "Unpacking libarchive-dev:amd64 (3.4.0-2ubuntu1.2) ...\n",
+            "Setting up libarchive-dev:amd64 (3.4.0-2ubuntu1.2) ...\n",
+            "Processing triggers for man-db (2.9.1-1) ...\n",
+            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting libarchive\n",
             "  Downloading libarchive-0.4.7.tar.gz (23 kB)\n",
+            "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "Collecting nose\n",
             "  Downloading nose-1.3.7-py3-none-any.whl (154 kB)\n",
-            "\u001b[K     |████████████████████████████████| 154 kB 7.2 MB/s \n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m154.7/154.7 KB\u001b[0m \u001b[31m15.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hBuilding wheels for collected packages: libarchive\n",
             "  Building wheel for libarchive (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for libarchive: filename=libarchive-0.4.7-py3-none-any.whl size=31646 sha256=42bf6b8e16f3b1fb6575dd55f42c25180ed469ca2cfd6471462559a7cd55a8df\n",
-            "  Stored in directory: /root/.cache/pip/wheels/63/b1/c6/b3da79bec2012175bd43603eed98ef8548ac1733b77c1d4330\n",
+            "  Created wheel for libarchive: filename=libarchive-0.4.7-py3-none-any.whl size=31648 sha256=30e4dbfdeb655721e460b37c94219c27e1407e7bbddbfb075a14ff29ec71c1d0\n",
+            "  Stored in directory: /root/.cache/pip/wheels/e2/96/fb/b17d6b9adb7c223428b4c77d9e8bc29f40a51d625389b73461\n",
             "Successfully built libarchive\n",
             "Installing collected packages: nose, libarchive\n",
             "Successfully installed libarchive-0.4.7 nose-1.3.7\n"
@@ -851,11 +836,54 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**TODO (3rd):** Look for any other library that is not in Colaboratory and install it using pip/apt-get."
+        "**TODO (3rd):** Look for any other library that is not in Colaboratory and \n",
+        "\n",
+        "*   List item\n",
+        "*   List item\n",
+        "\n",
+        "install it using pip/apt-get."
       ],
       "metadata": {
         "id": "E6U43zwozxoK"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install scikit-image\n",
+        "import skimage\n"
+      ],
+      "metadata": {
+        "id": "GIqBLNEUwMwk",
+        "outputId": "6ac1ab46-e074-4df5-9e15-bd9f0599429a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
+            "Requirement already satisfied: scikit-image in /usr/local/lib/python3.8/dist-packages (0.18.3)\n",
+            "Requirement already satisfied: pillow!=7.1.0,!=7.1.1,>=4.3.0 in /usr/local/lib/python3.8/dist-packages (from scikit-image) (7.1.2)\n",
+            "Requirement already satisfied: networkx>=2.0 in /usr/local/lib/python3.8/dist-packages (from scikit-image) (3.0)\n",
+            "Requirement already satisfied: scipy>=1.0.1 in /usr/local/lib/python3.8/dist-packages (from scikit-image) (1.7.3)\n",
+            "Requirement already satisfied: tifffile>=2019.7.26 in /usr/local/lib/python3.8/dist-packages (from scikit-image) (2023.2.3)\n",
+            "Requirement already satisfied: imageio>=2.3.0 in /usr/local/lib/python3.8/dist-packages (from scikit-image) (2.9.0)\n",
+            "Requirement already satisfied: matplotlib!=3.0.0,>=2.0.0 in /usr/local/lib/python3.8/dist-packages (from scikit-image) (3.2.2)\n",
+            "Requirement already satisfied: PyWavelets>=1.1.1 in /usr/local/lib/python3.8/dist-packages (from scikit-image) (1.4.1)\n",
+            "Requirement already satisfied: numpy>=1.16.5 in /usr/local/lib/python3.8/dist-packages (from scikit-image) (1.21.6)\n",
+            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.8/dist-packages (from matplotlib!=3.0.0,>=2.0.0->scikit-image) (0.11.0)\n",
+            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.8/dist-packages (from matplotlib!=3.0.0,>=2.0.0->scikit-image) (3.0.9)\n",
+            "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.8/dist-packages (from matplotlib!=3.0.0,>=2.0.0->scikit-image) (2.8.2)\n",
+            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.8/dist-packages (from matplotlib!=3.0.0,>=2.0.0->scikit-image) (1.4.4)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.8/dist-packages (from python-dateutil>=2.1->matplotlib!=3.0.0,>=2.0.0->scikit-image) (1.15.0)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -943,6 +971,15 @@
       ],
       "metadata": {
         "id": "OQkZNDDby7iX"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Ionita Bogdan-Marian\n"
+      ],
+      "metadata": {
+        "id": "oM_L1hy8wfkE"
       }
     }
   ],
